--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eventemitter3": "^5.0.1",
     "express": "4.18.1",
     "formik": "^2.4.6",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "mantine-datatable": "^7.11.1",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.52.1",
     "react-i18next": "14.1.2",
     "react-toastify": "^10.0.5",
+    "redis": "^4.6.15",
     "stylelint": "^16.6.1",
     "tslib": "2.3.0",
     "yup": "^1.4.0"
