--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -25,3 +25,6 @@ AWS_SECRET_ACCESS_KEY=secret_key
 AWS_REGION=us-east-1
 S3_BUCKET=s3_bucket
 ASSETS_URL=https://s3.amazonaws.com/s3_bucket
+
+#Google ApiKey
+API_KEY="AIzaSyD-wGzWbwI3_zNP4zf-kwllDch-ZhX8hmc"
